--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<img src="meu-site/imagens/lais3.jpg">
+<img src="C:\Users\laiss\Documents\meu-site\imagens\lais3.jpg">
 
    
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
