--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ html {
     </div>
 
     <section class="lai">
-        <img src="imagens/lai.PNG">
+        <img src="https://i.pinimg.com/736x/bd/ca/13/bdca130e623250215a1bbfe7df32b191.jpg">
     </section>
 </div>
 
